设计模式基础篇

--- a/designPattern/设计模式基础篇.md
+++ b/designPattern/设计模式基础篇.md
@@ -1,2 +1,30 @@
-# 设计模式基础 #
-　　类与类之间的关系：
+# 设计模式基础篇 #
+
+　**设计原则：**<br>
+
+　　1.开闭原则　
+> 开闭原则即为开放封闭原则，就是指软件实体（类，模块，函数等）应该是可以扩展的，而不可修改，即“对于扩展开放，对修改封闭”。<br>
+　　
+
+　　2.里氏代换原则
+> 一个软件实体中能使用父类的地方，也一定适应子类，而且程序行为没有变化，也即子类型必须能够替换它们的父类型。<br>
+
+　　3.依赖倒转原则
+> 针对接口编程，而非实现，其包含两层含义：高层模块不应依赖低层模块，两个都应该依赖抽象；抽象不应该依赖细节，细节应该依赖抽象。
+
+　　4.迪米特原则
+> 又称最少知道原则，如两类不必彼此通信，那就不应发生直接的相互作用，如一个类需要调用另一个类的某一个方法的话，可以通过第三者转发这个调用，强调类之间的松耦合。<br>
+
+　　5.单一职责原则
+> 类似功能单一，就一个类而言，应该仅有一个引起变化的原因。
+
+　　**类与类之间的关系：**<br>
+
+　　1.泛化关系：也就是继承关系，用**空心三角和实线**表示<br>
+　　2.关联关系：表示“知道”，“了解”，如果A需要B，那么由A指向B，用**实线和箭头** 表示<br>
+　　3.聚合关系：聚合关系是一种“弱拥有”，A可以包含B,B不是A不可分割的一部分，如雁群和大雁的关系，菱形在雁群这边，实线箭头指向大雁，用**空心菱形和实线箭头**表示<br>
+　　4.组合关系：组合关系是一种“强拥有”，有严格部分与整体的关系，是不可分割的一部分，如鸟和翅膀的关系，用**实心菱形和实线箭头** 表示<br>
+　　5.依赖关系：表示“需要”，“离不开”，比如动物需要氧气和水，A的存在必须依赖于另一个对象B，则A依赖于B，用**虚线箭头**表示<br>
+　　6.实现关系：实现接口，用**空心三角和虚线**表示<br>
+![](file:///F:/markdown_pictures/类与类关系图.jpg)
+
