设计模式基础篇

--- a/designPattern/设计模式基础篇/设计模式基础篇.md
+++ b/designPattern/设计模式基础篇/设计模式基础篇.md
@@ -1,4 +1,4 @@
-# 设计模式基础篇 #
+﻿# 设计模式基础篇 #
 
 　**设计原则：**<br>
 
@@ -24,10 +24,10 @@
 　　**类与类之间的关系：**<br>
 
 　　1.泛化关系：也就是继承关系，用**空心三角和实线**表示<br>
-　　2.关联关系：表示“知道”，“了解”，如果A需要B，那么由A指向B，用**实线和箭头** 表示<br>
-　　3.聚合关系：聚合关系是一种“弱拥有”，A可以包含B,B不是A不可分割的一部分，如雁群和大雁的关系，菱形在雁群这边，实线箭头指向大雁，用**空心菱形和实线箭头**表示<br>
-　　4.组合关系：组合关系是一种“强拥有”，有严格部分与整体的关系，是不可分割的一部分，如鸟和翅膀的关系，用**实心菱形和实线箭头** 表示<br>
-　　5.依赖关系：表示“需要”，“离不开”，比如动物需要氧气和水，A的存在必须依赖于另一个对象B，则A依赖于B，用**虚线箭头**表示<br>
+　　2.关联关系：表示“知道”，“了解”，如果A需要B，那么由A指向B，用**实线和箭头** 表示。如果A类对象关联于B类对象，那么在代码实现时，一般将B类的实例化对象作为A类的属性，即在A类属性中，直接new一个B类对象。<br>
+　　3.聚合关系：聚合关系是一种“弱拥有”，A可以包含B,B不是A不可分割的一部分，如雁群和大雁的关系，菱形在雁群这边，实线箭头指向大雁，用**空心菱形和实线箭头**表示,在代码中，若A依赖于B，则B类的未实例化对象将作为A类的属性。<br>
+　　4.组合关系：组合关系是一种“强拥有”，有严格部分与整体的关系，是不可分割的一部分，如鸟和翅膀的关系，用**实心菱形和实线箭头** 表示，在代码中，若A依赖于B，则B类的未实例化对象将作为A类的属性。<br>
+　　5.依赖关系：表示“需要”，“离不开”，比如动物需要氧气和水，A的存在必须依赖于另一个对象B，则A依赖于B，用**虚线箭头**表示，如果A类对象依赖于B类对象，那么在代码实现时，一般将B类的实例化对象作为A类的属性，即在A类属性中，直接new一个B类对象。<br>
 　　6.实现关系：实现接口，用**空心三角和虚线**表示<br>
 ![](https://github.com/herodll/myblog/blob/master/designPattern/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E5%9F%BA%E7%A1%80%E7%AF%87/%E7%B1%BB%E4%B8%8E%E7%B1%BB%E5%85%B3%E7%B3%BB%E5%9B%BE.jpg)
 
