--- a/designPattern/代理模式/代理模式.md
+++ b/designPattern/代理模式/代理模式.md
@@ -1,4 +1,4 @@
-# 代理模式 #
+﻿# 代理模式 #
 　　代理模式：  
 
 > 为其他对象提供一种代理以控制这个对象的访问。
@@ -14,7 +14,7 @@
 
 　　3.安全代理：用来控制真实对象访问时的权限。
 
-　　4.安全代理：是指当调用真实的对象时，代理处理另外一些事。　　
+　　4.智能指引：是指当调用真实的对象时，代理处理另外一些事。　　
 
 　　举个例子：比如A代替B去追求C，给C送花之类的，那么A相当于就是中间的代理类了，而B就变成了RealSubject类。抽象出一个接口，用于对具体的代理类和被代理类的抽象。
 
